deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lottery-nexign-deploy
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: lottery-backend-app
    spec:
      containers:
        - name: lottery-backend-container
          image: alekseyssam92/nexign_lottery:0.0.4
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: lottery-backend-app
