service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lottery-service
spec:
  type: ClusterIP
  selector:
    app: lottery-backend-app
  ports:
  - port: 8080
    targetPort: 8080
