ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lottery-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lottery-service
            port:
              number: 8080
